# Rustaska

./: Cargo.toml  README.md
example-files/: ex1.lst
example-files/ex1-results/: err.txt  num.csv  txt.csv
src/: lib.rs  main.rs  model.rs  parser.rs  persistence.rs  source_reader.rs
src/parser/: lexer.rs
src/source_reader/: tests.rs
tests/: e2e.rs
