[package]
name = "rustaska"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"

[dev-dependencies]
tempfile = "3.8.0"

[profile.release]
lto = true
codegen-units=1
strip = true
